modify nokia photo url

--- a/_posts/2015-01-26-test.markdown
+++ b/_posts/2015-01-26-test.markdown
@@ -6,4 +6,4 @@ categories: jekyll update
 ---
 Nokia 6108
 
-![nokia 6108](http://c.picphotos.baidu.com/album/s%3D900%3Bq%3D90/sign=aa93028165380cd7e21eaeed917fdc09/aa18972bd40735fafc20b3889e510fb30f24082a.jpg)
+![nokia 6108](http://c.picphotos.baidu.com/album/s%3D550%3Bq%3D90%3Bc%3Dxiangce%2C100%2C100/sign=13c96319972bd40746c7d3f84bb2ef6c/aa18972bd40735fafc20b3889e510fb30f24082a.jpg?referer=696061763912b31b9e7bf91968e9&x=.jpg)
