--- a/_posts/2015-01-26-test.markdown
+++ b/_posts/2015-01-26-test.markdown
@@ -6,4 +6,4 @@ categories: jekyll update
 ---
 Nokia 6108
 
-![nokia 6108](http://img1.ph.126.net/-x8UehJXvnhxnk57GVV8-Q==/6630636757140506086.jpg)
+![nokia 6108](http://photos-h.ak.instagram.com/hphotos-ak-xaf1/t51.2885-15/10948686_642768462493759_375652672_n.jpg)
