--- a/_posts/2015-02-05-goodbye-2014.markdown
+++ b/_posts/2015-02-05-goodbye-2014.markdown
@@ -18,7 +18,7 @@ tags:
 团队年夜饭的时候刚好女儿发高烧,没有喝酒.
 
 
-![charles](http://7vii66.com1.z0.glb.clouddn.com/2.jpg)
+![charles](http://7vii66.com1.z0.glb.clouddn.com/2015-02-05-goodbye-2014.jpg)
 
 ---
 
