修改blog中的图片链接

--- a/_posts/2013-04-07-sanya.markdown
+++ b/_posts/2013-04-07-sanya.markdown
@@ -7,7 +7,7 @@ tag:
   
 ---
 在三亚的东方文化酒店草坪上,不经意拍下了这张照片,很是喜欢!  
-![sanya](http://7vii66.com1.z0.glb.clouddn.com/2013-04-07-sanya.jpg)
+![sanya](http://chengchao.name/resource-container/image/sanya.jpg)
 
 - 三亚还是比较破的一个城市,除了海边的5星宾馆外,市区和机场都比较破.
 - 看过马尔代夫的沙滩后,真觉得三亚的沙滩很一般,即便是在沙滩最好的亚龙湾.
