--- a/_posts/2013-04-07-sanya.markdown
+++ b/_posts/2013-04-07-sanya.markdown
@@ -11,7 +11,7 @@ tag:
 
 - 三亚还是比较破的一个城市,除了海边的5星宾馆外,市区和机场都比较破.
 - 看过马尔代夫的沙滩后,真觉得三亚的沙滩很一般,即便是在沙滩最好的亚龙湾.
-- 鸟巢纯粹是被&lt;非诚勿扰&gt;搞火的,上面的泰餐又贵又不好吃
+- 鸟巢纯粹是被<非诚勿扰>搞火的,上面的泰餐又贵又不好吃
 - 拖伞还是很好玩的,可惜没有玩摩托艇,留着下次玩
 - 丽思的早餐一流的,早饭,中饭合着一顿吃.
 - 文华东方的风格我很喜欢.特别适合纯度假.
